--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "server",
+  "name": "nasa-project-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nasa Mission Control API",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
   }
 }
