--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf ../server/public && mv build ../server/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
