--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.0.3",
     "express": "^4.17.2",
+    "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pm2": "^5.1.2"
