--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/fernando-stteffen/Nasa-Project/issues"
   },
-  "homepage": "https://github.com/fernando-stteffen/Nasa-Project#readme"
+  "homepage": "https://github.com/fernando-stteffen/Nasa-Project#readme",
+  "dependencies": {
+    "axios": "^0.25.0"
+  }
 }
