--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.0.3",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
