--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,8 +1,10 @@
 name: NASA Project CI
+
 on:
   push: 
     branches: [ main ]
     pull_request: [ main ]
+
 jobs: 
   build:
     env:
@@ -11,9 +13,10 @@ jobs:
       matrix: 
         node-version: [ 14.x, 16.x ]
     runs-on: [ ubuntu-latest ]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js version 16
+      - name: Use Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with: 
           node-version: ${{ matrix.node-version }}
